--- a/css file/css.css
+++ b/css file/css.css
@@ -144,11 +144,11 @@ h2{
 @media screen and (max-width:576px) {
     .Login-From{
         flex-direction: column;
-        margin-left: 130px;
+        margin-left: 90px;
         margin-top: 50px;
         padding: 10px;
     }
     .login-h3{
-        margin-left: 100px;
+        margin-right: 100px;
     }
 }
